with float32 to uint8

--- a/api.ipynb
+++ b/api.ipynb
@@ -16,7 +16,8 @@
     "import torchvision as tv \n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "import unet"
+    "import unet\n",
+    "from utils.float32_to_uint8 import float32_to_uint8"
    ]
   },
   {
@@ -52,11 +53,16 @@
     "        self.model.load_state_dict(torch.load(model_path))\n",
     "        self.model.eval()\n",
     "        \n",
-    "    def __call__(self, img):\n",
+    "    def __call__(self, img, target=None):\n",
     "        with torch.no_grad():\n",
     "            x = self.data_transform(img).unsqueeze(0).cuda()\n",
+    "            n, c, h, w = x.shape\n",
     "            noise = self.model(x)\n",
+    "            if target is not None:\n",
+    "                noise = noise.view(n, -1, c, h, w)\n",
+    "                noise = noise[0, target]\n",
     "            x = x + noise\n",
+    "            x = float32_to_uint8(x)\n",
     "            x = x.squeeze().detach().cpu()\n",
     "            x = ((x * 0.5) + 0.5) * 255\n",
     "            x = torch.clamp(x, min=0, max=255).numpy()\n",
@@ -69,18 +75,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "attach_api = AttackAPI('saved_models/best_model: UNet, with_target: False, beta: 8.pt', False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "attach_api = AttackAPI('saved_models/best_model: UNet, with_target: True, beta: 8.pt', True)\n",
+    "target = 1\n",
     "img = plt.imread('dev_data/eef26abf-08be-4754-8421-57f5193d3854.png')\n",
     "img = (img * 255).astype(np.uint8)\n",
-    "noise_img = attach_api(img)"
+    "noise_img = attach_api(img, target)"
    ]
   },
   {
