--- a/api.ipynb
+++ b/api.ipynb
@@ -17,7 +17,7 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import unet\n",
-    "from utils.float32_to_uint8 import float32_to_uint8"
+    "from utils.converter import float32_to_uint8"
    ]
   },
   {
@@ -50,7 +50,9 @@
     "            self.model = unet.UNet(3, 3 * num_classes, batch_norm=True).cuda()\n",
     "        else:\n",
     "            self.model = unet.UNet(3, 3, batch_norm=True).cuda()\n",
-    "        self.model.load_state_dict(torch.load(model_path))\n",
+    "            \n",
+    "        if model_path is not None:\n",
+    "            self.model.load_state_dict(torch.load(model_path))\n",
     "        self.model.eval()\n",
     "        \n",
     "    def __call__(self, img, target=None):\n",
@@ -75,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "attach_api = AttackAPI('saved_models/best_model: UNet, with_target: True, beta: 8.pt', True)\n",
+    "attach_api = AttackAPI(None, True)\n",
     "target = 1\n",
     "img = plt.imread('dev_data/eef26abf-08be-4754-8421-57f5193d3854.png')\n",
     "img = (img * 255).astype(np.uint8)\n",
