--- a/api.ipynb
+++ b/api.ipynb
@@ -17,16 +17,14 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import unet\n",
-    "from utils.converter import float32_to_uint8"
+    "from utils.converter import float32_to_uint8, uint8_to_float32"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -65,9 +63,7 @@
     "                noise = noise[0, target]\n",
     "            x = x + noise\n",
     "            x = float32_to_uint8(x)\n",
-    "            x = x.squeeze().detach().cpu()\n",
-    "            x = ((x * 0.5) + 0.5) * 255\n",
-    "            x = torch.clamp(x, min=0, max=255).numpy()\n",
+    "            x = torch.clamp(x, min=0, max=255).cpu().squeeze().numpy()\n",
     "        return np.transpose(x, (1, 2, 0)).astype(np.uint8)"
    ]
   },
@@ -77,8 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "attach_api = AttackAPI(None, True)\n",
-    "target = 1\n",
+    "attach_api = AttackAPI('saved_models/best_model: UNet, with_target: False, beta: 8.pt', False)\n",
+    "target = None\n",
     "img = plt.imread('dev_data/eef26abf-08be-4754-8421-57f5193d3854.png')\n",
     "img = (img * 255).astype(np.uint8)\n",
     "noise_img = attach_api(img, target)"
