--- a/cam_api.ipynb
+++ b/cam_api.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "code_folding": [
+     12
+    ]
+   },
    "outputs": [],
    "source": [
     "#coding=utf-8\n",
@@ -15,67 +19,28 @@
     "import torchvision as tv \n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "from models import gain"
+    "from utils import api"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "code_folding": []
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "class GAINAPI(object):\n",
-    "    def __init__(self, model_path=None, num_classes=110):\n",
-    "        mean_arr = [0.5, 0.5, 0.5]\n",
-    "        stddev_arr = [0.5, 0.5, 0.5]\n",
-    "        normalize = tv.transforms.Normalize(mean=mean_arr,\n",
-    "                                         std=stddev_arr)\n",
-    "\n",
-    "        model_dimension = 224\n",
-    "        center_crop = 224\n",
-    "        self.data_transform = tv.transforms.Compose([\n",
-    "            tv.transforms.Resize(model_dimension),\n",
-    "            tv.transforms.CenterCrop(center_crop),\n",
-    "            tv.transforms.ToTensor(),\n",
-    "            normalize,\n",
-    "        ])\n",
-    "        self.model = gain.GAIN(num_classes).cuda()\n",
-    "            \n",
-    "        if model_path is not None:\n",
-    "            self.model.load_state_dict(torch.load(model_path))\n",
-    "        self.model.eval()\n",
-    "        self.softmask = gain.SoftMask()\n",
-    "        \n",
-    "    def __call__(self, img):\n",
-    "        with torch.no_grad():\n",
-    "            x = self.data_transform(img).unsqueeze(0).cuda()\n",
-    "            n, c, h, w = x.shape\n",
-    "            out, out_masked, cam = self.model(x)\n",
-    "            cam = cam.cpu().squeeze().numpy()\n",
-    "        return cam"
+    "gain_api = api.GAINAPI('saved_models/best_GAIN with_transform: True.pt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/common/miniconda3/envs/python3.7_pytorch/lib/python3.6/site-packages/torch/nn/functional.py:1332: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
-      "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gain_api = GAINAPI('saved_models/best_GAIN with_transform: False.pt')\n",
-    "img = Image.open('data/IJCAI_2019_AAAC_train/00010/1b1a6cab245cd68a4065f86d219ca4f9.jpg')\n",
+    "img = Image.open('data/IJCAI_2019_AAAC_train/00003/109afd81452d4c1d431be3eb2167b783.jpg').resize((224, 224))\n",
     "img_np = np.array(img)\n",
-    "cam = gain_api(img)"
+    "cam = gain_api(img)\n",
+    "mask = cam > 0.5"
    ]
   },
   {
@@ -84,16 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(cam > 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img"
+    "plt.imshow(img_np * (1 - mask.reshape(224, 224, 1)))"
    ]
   },
   {
