with batch inference

--- a/play_ground.ipynb
+++ b/play_ground.ipynb
@@ -126,6 +126,8 @@
    "source": [
     "#coding=utf-8\n",
     "import os\n",
+    "import math\n",
+    "import glob\n",
     "import torch\n",
     "from PIL import Image\n",
     "\n",
@@ -137,32 +139,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[tensor(0.), tensor(0.), tensor(0.)] tensor(9.3229)\n",
-      "tensor(9.3229)\n",
-      "[tensor(0.), tensor(0.), tensor(0.)] tensor(10.2901)\n",
-      "tensor(10.2901)\n",
-      "[tensor(1.), tensor(0.), tensor(1.)] tensor(10.7732)\n",
-      "tensor(53.4398)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
+    "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = ','.join(map(str, [1]))\n",
     "    models = [pretrainedmodels.__dict__[name]() for name in classifier_name]\n",
     "    classifiers = [ClassifierNet(model, num_classes) for model in models]\n",
     "    for c, p in zip(classifiers, classifier_path):\n",
     "        c.load_state_dict(torch.load(p))\n",
     "        \n",
-    "    img = [Image.open('data/IJCAI_2019_AAAC_train/00000/002a613a47c88fc19b9a15776532f32d.jpg')]\n",
-    "    solver = Attack(classifiers, device='cuda', patience=2)\n",
-    "    result = solver.predict(img, [1], True)"
+    "    img = [Image.open(i) for i in glob.iglob('data/dev_data/*.png')][: 16]\n",
+    "    target = [1] * len(img)\n",
+    "    result = []\n",
+    "    for i in range(math.ceil(len(img) / 16)):\n",
+    "        batch_x = img[i * 16: (i + 1) * 16]\n",
+    "        batch_y = target[i * 16: (i + 1) * 16]\n",
+    "        solver = Attack(classifiers, device='cuda', patience=2)\n",
+    "        result.extend(solver.predict(img, target, True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result[0]"
    ]
   },
   {
