--- a/play_ground.ipynb
+++ b/play_ground.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,26 +142,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[tensor(0.0625), tensor(0.1875), tensor(0.1875)] tensor(1.2968)\n",
-      "tensor(10.6301)\n",
-      "[tensor(0.), tensor(0.), tensor(0.)] tensor(1.5909)\n",
-      "tensor(1.5909)\n",
-      "[tensor(0.), tensor(0.), tensor(0.)] tensor(3.5941)\n",
-      "tensor(3.5941)\n",
-      "[tensor(0.2500), tensor(0.2500), tensor(0.3750)] tensor(1.0911)\n",
-      "tensor(19.7578)\n",
-      "[tensor(0.), tensor(0.), tensor(0.)] tensor(2.8570)\n",
-      "tensor(2.8570)\n",
-      "[tensor(0.), tensor(0.), tensor(0.)] tensor(6.1822)\n",
-      "tensor(6.1822)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
     "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = ','.join(map(str, [1]))\n",
@@ -170,7 +151,7 @@
     "    for c, p in zip(classifiers, classifier_path):\n",
     "        c.load_state_dict(torch.load(p))\n",
     "        \n",
-    "    solver = Attack(classifiers, device='cuda', patience=2)\n",
+    "    solver = Attack(classifiers, device='cuda', patience=2, max_iteration=30)\n",
     "    img = [Image.open(i) for i in glob.iglob('data/dev_data/*.png')]\n",
     "    target = [1] * len(img)\n",
     "    result = []\n",
@@ -179,7 +160,7 @@
     "        torch.cuda.empty_cache()\n",
     "        batch_x = img[i * batch_size: (i + 1) * batch_size]\n",
     "        batch_y = target[i * batch_size: (i + 1) * batch_size]\n",
-    "        result.extend(solver.predict(batch_x, batch_y, True, max_perturbation=10))"
+    "        result.extend(solver.predict(batch_x, batch_y, True, max_perturbation=10, lr=lr))"
    ]
   },
   {
