--- a/play_ground.ipynb
+++ b/play_ground.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,9 +140,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/7 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor(0.0625), tensor(0.2500), tensor(0.1875)] tensor(1.3324)\n",
+      "tensor(11.9990)\n",
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(1.7975)\n",
+      "tensor(1.7975)\n",
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(3.1152)\n",
+      "tensor(3.1152)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 14%|█▍        | 1/7 [00:59<05:57, 59.63s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(3.7429)\n",
+      "tensor(3.7429)\n",
+      "[tensor(0.1875), tensor(0.0625), tensor(0.2500)] tensor(1.1540)\n",
+      "tensor(11.8207)\n",
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(1.5744)\n",
+      "tensor(1.5744)\n",
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(2.0447)\n",
+      "tensor(2.0447)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 29%|██▊       | 2/7 [01:55<04:51, 58.38s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(2.3168)\n",
+      "tensor(2.3168)\n",
+      "[tensor(0.3750), tensor(0.5000), tensor(0.4375)] tensor(1.1963)\n",
+      "tensor(29.1963)\n",
+      "[tensor(0.), tensor(0.), tensor(0.0625)] tensor(1.7822)\n",
+      "tensor(3.1155)\n",
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(2.4022)\n",
+      "tensor(2.4022)\n",
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(3.6353)\n",
+      "tensor(3.6353)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 43%|████▎     | 3/7 [03:06<04:09, 62.29s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(3.8299)\n",
+      "tensor(3.8299)\n",
+      "[tensor(0.5625), tensor(0.3750), tensor(0.4375)] tensor(1.1934)\n",
+      "tensor(30.5267)\n",
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(1.6366)\n",
+      "tensor(1.6366)\n",
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(3.1652)\n",
+      "tensor(3.1652)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 57%|█████▋    | 4/7 [04:04<03:02, 60.85s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(5.1547)\n",
+      "tensor(5.1547)\n",
+      "[tensor(0.4375), tensor(0.5000), tensor(0.3125)] tensor(1.0355)\n",
+      "tensor(27.7021)\n",
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(1.4788)\n",
+      "tensor(1.4788)\n",
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(1.9223)\n",
+      "tensor(1.9223)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 71%|███████▏  | 5/7 [05:03<02:00, 60.48s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(2.8635)\n",
+      "tensor(2.8635)\n",
+      "[tensor(0.4375), tensor(0.3750), tensor(0.6250)] tensor(1.0960)\n",
+      "tensor(31.7626)\n",
+      "[tensor(0.1250), tensor(0.0625), tensor(0.0625)] tensor(1.2782)\n",
+      "tensor(6.6115)\n",
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(1.5388)\n",
+      "tensor(1.5388)\n",
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(1.8279)\n",
+      "tensor(1.8279)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 86%|████████▌ | 6/7 [06:12<01:03, 63.03s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(2.1188)\n",
+      "tensor(2.1188)\n",
+      "[tensor(0.4286), tensor(0.5000), tensor(0.4286)] tensor(1.0821)\n",
+      "tensor(30.0345)\n",
+      "[tensor(0.0714), tensor(0.0714), tensor(0.1429)] tensor(1.4806)\n",
+      "tensor(7.5758)\n",
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(1.9727)\n",
+      "tensor(1.9727)\n",
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(2.4050)\n",
+      "tensor(2.4050)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "100%|██████████| 7/7 [07:17<00:00, 63.68s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor(0.), tensor(0.), tensor(0.)] tensor(2.7378)\n",
+      "tensor(2.7378)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == '__main__':\n",
     "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = ','.join(map(str, [1]))\n",
@@ -165,11 +347,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result[0]"
+    "tmp = result[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp.save('pics/1.png')"
    ]
   },
   {
