fix patience bug

--- a/play_ground.ipynb
+++ b/play_ground.ipynb
@@ -175,7 +175,68 @@
      "output_type": "stream",
      "text": [
       "tensor(40.7765)\n",
-      "tensor(85.4767)\n"
+      "tensor(85.4767)\n",
+      "tensor(35.4209)\n",
+      "tensor(11.1306)\n",
+      "tensor(31.5852)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 29%|██▊       | 2/7 [01:02<02:37, 31.49s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(50.6597)\n",
+      "tensor(100.9311)\n",
+      "tensor(26.2697)\n",
+      "tensor(29.8662)\n",
+      "tensor(25.7511)\n",
+      "tensor(44.8864)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 43%|████▎     | 3/7 [01:39<02:12, 33.10s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(73.9917)\n",
+      "tensor(113.2594)\n",
+      "tensor(42.5099)\n",
+      "tensor(17.7666)\n",
+      "tensor(21.3593)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 57%|█████▋    | 4/7 [02:12<01:38, 32.93s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(51.8169)\n",
+      "tensor(88.9571)\n",
+      "tensor(22.5756)\n",
+      "tensor(13.2672)\n",
+      "tensor(16.3739)\n"
      ]
     }
    ],
