fix classifier repeat bug

--- a/play_ground.ipynb
+++ b/play_ground.ipynb
@@ -120,13 +120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [],
    "source": [
     "#coding=utf-8\n",
     "import os\n",
-    "import csv \n",
+    "import csv\n",
     "import math\n",
     "import glob\n",
     "import tqdm\n",
@@ -136,111 +140,9 @@
     "import pretrainedmodels\n",
     "from config_gba import *\n",
     "from models.gradient_based_attack import Attack\n",
-    "from models.classifier import ClassifierNet, Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|          | 0/7 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(112.9514)\n",
-      "tensor(26.0521)\n",
-      "tensor(9.0364)\n",
-      "tensor(25.3787)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 14%|█▍        | 1/7 [00:31<03:08, 31.48s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(40.7765)\n",
-      "tensor(85.4767)\n",
-      "tensor(35.4209)\n",
-      "tensor(11.1306)\n",
-      "tensor(31.5852)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 29%|██▊       | 2/7 [01:02<02:37, 31.49s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(50.6597)\n",
-      "tensor(100.9311)\n",
-      "tensor(26.2697)\n",
-      "tensor(29.8662)\n",
-      "tensor(25.7511)\n",
-      "tensor(44.8864)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 43%|████▎     | 3/7 [01:39<02:12, 33.10s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(73.9917)\n",
-      "tensor(113.2594)\n",
-      "tensor(42.5099)\n",
-      "tensor(17.7666)\n",
-      "tensor(21.3593)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 57%|█████▋    | 4/7 [02:12<01:38, 32.93s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(51.8169)\n",
-      "tensor(88.9571)\n",
-      "tensor(22.5756)\n",
-      "tensor(13.2672)\n",
-      "tensor(16.3739)\n"
-     ]
-    }
-   ],
-   "source": [
+    "from models.classifier import ClassifierNet, Classifier\n",
+    "\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = ','.join(map(str, devices))\n",
     "    models = [pretrainedmodels.__dict__[name]() for name in classifier_name]\n",
@@ -262,14 +164,15 @@
     "                data['target'].append(int(row['trueLabel']))\n",
     "    result = []\n",
     "    epoch = math.ceil(len(data['imgs']) / batch_size)\n",
-    "    \n",
-    "    solver = Attack(classifiers[: 2], classifiers[: 2], \n",
+    "\n",
+    "    solver = Attack(classifiers[: -1], classifiers[-1: ], \n",
     "                    device='cuda', patience=patience, max_iteration=max_iteration)\n",
     "    for i in tqdm.tqdm(range(epoch), total=epoch):\n",
     "        torch.cuda.empty_cache()\n",
     "        batch_x = data['imgs'][i * batch_size: (i + 1) * batch_size]\n",
     "        batch_y = data['target'][i * batch_size: (i + 1) * batch_size]\n",
-    "        result.extend(solver.predict(batch_x, batch_y, targeted, max_perturbation=max_perturbation, lr=lr))"
+    "        result.extend(solver.predict(batch_x, batch_y, targeted, max_perturbation=max_perturbation, lr=lr))\n",
+    "        "
    ]
   },
   {
