with ddn attack

--- a/play_ground.ipynb
+++ b/play_ground.ipynb
@@ -123,7 +123,7 @@
    "execution_count": null,
    "metadata": {
     "code_folding": [
-     0
+     15
     ]
    },
    "outputs": [],
@@ -200,6 +200,81 @@
    "outputs": [],
    "source": [
     "tmp.save('pics/2.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:45<00:00, 45.08s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#coding=utf-8\n",
+    "import os\n",
+    "import csv\n",
+    "import math\n",
+    "import glob\n",
+    "import tqdm\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "import torchvision as tv\n",
+    "\n",
+    "from models import ddn\n",
+    "import pretrainedmodels\n",
+    "from config_ddn import *\n",
+    "from models.classifier import ClassifierNet, Classifier\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = ','.join(map(str, devices))\n",
+    "    models = [pretrainedmodels.__dict__[name]() for name in classifier_name]\n",
+    "    classifiers = [ClassifierNet(model, num_classes) for model in models]\n",
+    "    for c, p in zip(classifiers, classifier_path):\n",
+    "        c.load_state_dict(torch.load(p))\n",
+    "        c.eval()\n",
+    "        c = c.cuda()\n",
+    "        \n",
+    "        \n",
+    "    data = {'image_path': [], 'target': [], 'imgs': []}\n",
+    "    with open(os.path.join(data_path, 'dev.csv'), 'r') as f:\n",
+    "        reader = csv.DictReader(f)\n",
+    "        for row in reader:\n",
+    "            img_path = os.path.join(data_path, row['filename'])\n",
+    "            data['image_path'].append(img_path)\n",
+    "            data['imgs'].append(Image.open(img_path))\n",
+    "            if targeted:\n",
+    "                data['target'].append(int(row['targetedLabel']))\n",
+    "            else:\n",
+    "                data['target'].append(int(row['trueLabel']))\n",
+    "                \n",
+    "    transfrom = tv.transforms.Compose([\n",
+    "        tv.transforms.Resize((224, 224)),\n",
+    "        tv.transforms.ToTensor(),\n",
+    "    #     tv.transforms.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])\n",
+    "    ])\n",
+    "    attacker = ddn.DDN(steps=steps, device=torch.device('cuda: 0'))\n",
+    "    epoch = 1#math.ceil(len(data['imgs']) / batch_size)\n",
+    "    result = []\n",
+    "    for i in tqdm.tqdm(range(epoch), total=epoch):\n",
+    "        torch.cuda.empty_cache()\n",
+    "        batch_x = data['imgs'][i * batch_size: (i + 1) * batch_size]\n",
+    "        batch_y = data['target'][i * batch_size: (i + 1) * batch_size]\n",
+    "        \n",
+    "        batch_x = torch.cat([transfrom(i).unsqueeze(dim=0) for i in batch_x], dim=0).cuda()\n",
+    "        batch_y = torch.tensor(batch_y).cuda()\n",
+    "        \n",
+    "        result.append(attacker.attack(classifiers, batch_x, labels=batch_y, targeted=targeted).detach().cpu().data)\n",
+    "    result = torch.cat(result).numpy()\n",
+    "    result = np.transpose(result, (0, 2, 3, 1))\n",
+    "    result = [Image.fromarray(i) for i in (result * 255).astype(np.uint8)]"
    ]
   },
   {
