--- a/play_ground.ipynb
+++ b/play_ground.ipynb
@@ -123,8 +123,14 @@
    "execution_count": null,
    "metadata": {
     "code_folding": [
+     0,
      15
-    ]
+    ],
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
    },
    "outputs": [],
    "source": [
@@ -178,47 +184,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ],
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
-   "source": [
-    "tmp = result[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmp.save('pics/2.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:45<00:00, 45.08s/it]\n"
-     ]
-    }
-   ],
    "source": [
     "#coding=utf-8\n",
     "import os\n",
     "import csv\n",
+    "import time\n",
     "import math\n",
     "import glob\n",
     "import tqdm\n",
@@ -234,6 +212,7 @@
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
+    "    start = time.time()\n",
     "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = ','.join(map(str, devices))\n",
     "    models = [pretrainedmodels.__dict__[name]() for name in classifier_name]\n",
     "    classifiers = [ClassifierNet(model, num_classes) for model in models]\n",
@@ -261,7 +240,7 @@
     "    #     tv.transforms.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])\n",
     "    ])\n",
     "    attacker = ddn.DDN(steps=steps, device=torch.device('cuda: 0'))\n",
-    "    epoch = 1#math.ceil(len(data['imgs']) / batch_size)\n",
+    "    epoch = math.ceil(len(data['imgs']) / batch_size)\n",
     "    result = []\n",
     "    for i in tqdm.tqdm(range(epoch), total=epoch):\n",
     "        torch.cuda.empty_cache()\n",
@@ -274,7 +253,8 @@
     "        result.append(attacker.attack(classifiers, batch_x, labels=batch_y, targeted=targeted).detach().cpu().data)\n",
     "    result = torch.cat(result).numpy()\n",
     "    result = np.transpose(result, (0, 2, 3, 1))\n",
-    "    result = [Image.fromarray(i) for i in (result * 255).astype(np.uint8)]"
+    "    result = [Image.fromarray(i) for i in (result * 255).astype(np.uint8)]\n",
+    "    print(time.time() - start)"
    ]
   },
   {
