update ddn demo

--- a/play_ground.ipynb
+++ b/play_ground.ipynb
@@ -189,14 +189,99 @@
      0
     ],
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#coding=utf-8\n",
+    "import os\n",
+    "import math\n",
+    "import torch\n",
+    "import torchvision as tv\n",
+    "from tensorboardX import SummaryWriter\n",
+    "\n",
+    "import pretrainedmodels\n",
+    "from config_attack import *\n",
+    "from models.unet import UNet\n",
+    "from models.attack import Attack, AttackNet\n",
+    "from models.classifier import ClassifierNet\n",
+    "from dataset import image_from_json, image_list_folder\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    checkpoint_name = 'Attack targeted: {} weight: {} loss_mode: {}'.format(targeted, weight, loss_mode)\n",
+    "    comment = 'Attack targeted: {} weight: {} loss_mode: {}'.format(targeted, weight, loss_mode)\n",
+    "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = ','.join(map(str, devices))\n",
+    "\n",
+    "    mean_arr = [0.5, 0.5, 0.5]\n",
+    "    stddev_arr = [0.5, 0.5, 0.5]\n",
+    "    normalize = tv.transforms.Normalize(mean=mean_arr,\n",
+    "                                     std=stddev_arr)\n",
+    "    \n",
+    "    train_transform = tv.transforms.Compose([\n",
+    "        tv.transforms.Resize(image_size),\n",
+    "        tv.transforms.ToTensor(),\n",
+    "        normalize, \n",
+    "    ])\n",
+    "\n",
+    "    test_transform = tv.transforms.Compose([\n",
+    "        tv.transforms.Resize(image_size),\n",
+    "        tv.transforms.ToTensor(),\n",
+    "        normalize, \n",
+    "    ])\n",
+    "\n",
+    "        \n",
+    "    train_dataset = image_from_json.ImageDataSet(\n",
+    "        'data/IJCAI_2019_AAAC_train/train_info.json', transform=train_transform)\n",
+    "    train_sampler = torch.utils.data.sampler.RandomSampler(\n",
+    "        train_dataset, True, num_classes * epoch_size)\n",
+    "    train_loader = torch.utils.data.DataLoader(\n",
+    "        train_dataset, num_workers=16, batch_size=train_batch_size, sampler=train_sampler)\n",
+    "\n",
+    "    vali_dataset = image_from_json.ImageDataSet(\n",
+    "        'data/IJCAI_2019_AAAC_train/vali_info.json', transform=test_transform)\n",
+    "    vali_sampler = torch.utils.data.sampler.RandomSampler(\n",
+    "        vali_dataset, True, num_classes * epoch_size)\n",
+    "    vali_loader = torch.utils.data.DataLoader(\n",
+    "        vali_dataset, num_workers=16, batch_size=test_batch_size, sampler=vali_sampler)\n",
+    "    \n",
+    "    test_dataset = image_list_folder.ImageListFolder(\n",
+    "        root='data/dev_data/', transform=test_transform)\n",
+    "    test_loader = torch.utils.data.DataLoader(dataset=test_dataset, num_workers=16, batch_size=test_batch_size,\n",
+    "                                              shuffle=True, drop_last=False)\n",
+    "    \n",
+    "    model = [pretrainedmodels.__dict__[i](pretrained=None) for i in classifier_name]\n",
+    "    classifier = [ClassifierNet(i, num_classes) for i in model]\n",
+    "    for c, p in zip(classifier, classifier_path):\n",
+    "        c.load_state_dict(torch.load(p))\n",
+    "\n",
+    "    unet = UNet(n_classes=2 * num_classes * 3)\n",
+    "    attack_net = AttackNet(unet)\n",
+    "    solver = Attack(attack_net, classifier, train_loader, test_loader, test_batch_size, num_classes=num_classes, \n",
+    "                    loss_mode=loss_mode, weight=weight, \n",
+    "                    lr=lr, checkpoint_name=checkpoint_name, devices=devices, optimizer=optimizer, targeted=targeted)\n",
+    "    if checkpoint_path:\n",
+    "        solver.load_model(checkpoint_path)\n",
+    "#     with SummaryWriter(comment=comment) as writer:\n",
+    "#         solver.train(max_epoch, writer, epoch_size=math.ceil(num_classes * epoch_size / train_batch_size))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [],
    "source": [
     "#coding=utf-8\n",
     "import os\n",
     "import csv\n",
-    "import time\n",
     "import math\n",
     "import glob\n",
     "import tqdm\n",
@@ -212,15 +297,13 @@
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    start = time.time()\n",
     "    os.environ[\"CUDA_VISIBLE_DEVICES\"] = ','.join(map(str, devices))\n",
-    "    models = [pretrainedmodels.__dict__[name]() for name in classifier_name]\n",
+    "    models = [pretrainedmodels.__dict__[name](pretrained=None) for name in classifier_name]\n",
     "    classifiers = [ClassifierNet(model, num_classes) for model in models]\n",
     "    for c, p in zip(classifiers, classifier_path):\n",
     "        c.load_state_dict(torch.load(p))\n",
     "        c.eval()\n",
     "        c = c.cuda()\n",
-    "        \n",
     "        \n",
     "    data = {'image_path': [], 'target': [], 'imgs': []}\n",
     "    with open(os.path.join(data_path, 'dev.csv'), 'r') as f:\n",
@@ -239,22 +322,30 @@
     "        tv.transforms.ToTensor(),\n",
     "    #     tv.transforms.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])\n",
     "    ])\n",
-    "    attacker = ddn.DDN(steps=steps, device=torch.device('cuda: 0'))\n",
-    "    epoch = math.ceil(len(data['imgs']) / batch_size)\n",
-    "    result = []\n",
-    "    for i in tqdm.tqdm(range(epoch), total=epoch):\n",
-    "        torch.cuda.empty_cache()\n",
-    "        batch_x = data['imgs'][i * batch_size: (i + 1) * batch_size]\n",
-    "        batch_y = data['target'][i * batch_size: (i + 1) * batch_size]\n",
+    "#     attacker = ddn.DDN(steps=steps, device=torch.device('cuda: 0'))\n",
+    "#     epoch = math.ceil(len(data['imgs']) / batch_size)\n",
+    "#     result = []\n",
+    "#     for i in tqdm.tqdm(range(epoch), total=epoch):\n",
+    "#         torch.cuda.empty_cache()\n",
+    "#         batch_x = data['imgs'][i * batch_size: (i + 1) * batch_size]\n",
+    "#         batch_y = data['target'][i * batch_size: (i + 1) * batch_size]\n",
     "        \n",
-    "        batch_x = torch.cat([transfrom(i).unsqueeze(dim=0) for i in batch_x], dim=0).cuda()\n",
-    "        batch_y = torch.tensor(batch_y).cuda()\n",
+    "#         batch_x = torch.cat([transfrom(i).unsqueeze(dim=0) for i in batch_x], dim=0).cuda()\n",
+    "#         batch_y = torch.tensor(batch_y).cuda()\n",
     "        \n",
-    "        result.append(attacker.attack(classifiers, batch_x, labels=batch_y, targeted=targeted).detach().cpu().data)\n",
-    "    result = torch.cat(result).numpy()\n",
-    "    result = np.transpose(result, (0, 2, 3, 1))\n",
-    "    result = [Image.fromarray(i) for i in (result * 255).astype(np.uint8)]\n",
-    "    print(time.time() - start)"
+    "#         result.append(attacker.attack(classifiers, batch_x, labels=batch_y, \n",
+    "#                                       targeted=targeted, use_post_process=use_post_process).detach().cpu().data)\n",
+    "#     result = torch.cat(result).numpy()\n",
+    "#     result = np.transpose(result, (0, 2, 3, 1))\n",
+    "#     result = [Image.fromarray(i) for i in (result * 255).astype(np.uint8)]\n",
+    "#     if output_dir is not None:\n",
+    "#         if not os.path.exists(output_dir):\n",
+    "#             os.mkdir(output_dir)\n",
+    "#         for img, path in zip(result, data['image_path']):\n",
+    "#             name = path.split('/')[-1]\n",
+    "#             path = os.path.join(output_dir, name)\n",
+    "#             img = img.resize(output_size)\n",
+    "#             img.save(path)"
    ]
   },
   {
